--- a/test-plugin/build.gradle
+++ b/test-plugin/build.gradle
@@ -1,4 +1,3 @@
-
 group = "com.uitnetwork"
 version = "1.0.0"
 
@@ -23,18 +22,10 @@ dependencies {
 
 publishing {
     publications {
-        plugin(MavenPublication) {
+        testPlugin(MavenPublication) {
             from components.java
-
-            artifact jar {
-                classifier 'sources'
-            }
         }
 
 
     }
-
-//    repositories {
-//        mavenLocal()
-//    }
 }
