--- a/test-plugin-client/build.gradle
+++ b/test-plugin-client/build.gradle
@@ -31,3 +31,7 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     testCompile('org.springframework.boot:spring-boot-starter-test')
 }
+
+testPlugin {
+    someConfig = "some config from build.gradle"
+}
